--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 * {
     margin: 0;
     padding: 0;
@@ -22,25 +23,35 @@ body {
     @apply text-t-main bg-t-main-2;
     overflow-x: hidden;
 }
-@layer base {
+
+*::-webkit-scrollbar {
+    /*@apply h-[17px] w-[10px] md:h-[10px]*/
+    height: 17px;
+    width: 10px; /* ширина всей полосы прокрутки */
+}
+
+@media (max-width: 767px) {
     *::-webkit-scrollbar {
-        @apply h-[17px] w-[10px] md:h-[10px]
-        /*height: 17px;*/
-        /*width: 10px; !* ширина всей полосы прокрутки *!*/
-    }
-
-    *::-webkit-scrollbar-track {
-        @apply bg-opacity-0 bg-t-main;
-        /* цвет зоны отслеживания */
-    }
-
-    *::-webkit-scrollbar-thumb {
-        background-color: blue;    /* цвет бегунка */
-        /*border-radius: 20px;       !* округлось бегунка *!*/
-        /*border: 3px solid orange;  !* отступ вокруг бегунка *!*/
-        @apply bg-t-main rounded-[3px]
+        height: 10px;
     }
 }
+
+*::-webkit-scrollbar-track {
+    background: none;
+    /*@apply bg-opacity-0 bg-t-main;*/
+    /* цвет зоны отслеживания */
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #888888; /* цвет бегунка */
+    border-radius: 3px; /* округлось бегунка */
+    /*border: 3px solid orange;  !* отступ вокруг бегунка *!*/
+    /*@apply bg-t-main rounded-[3px]*/
+}
+
+
+
+
 
 
 
