--- a/app/globals.css
+++ b/app/globals.css
@@ -50,7 +50,7 @@ body {
 }
 
 *::-webkit-scrollbar-track {
-    background: none;
+    background: #444;
     /*@apply bg-opacity-0 bg-t-main;*/
     /* цвет зоны отслеживания */
 }
