--- a/app/globals.css
+++ b/app/globals.css
@@ -4,11 +4,11 @@
 
 @layer components {
     input {
-        @apply inline-flex w-full appearance-none items-center justify-center leading-none outline-none transition-all duration-200 bg-t-main-2 border-t-main h-[35px] rounded-[4px] px-[10px] text-[15px] border-[2px] text-t-hover-1 placeholder:text-t-main/40 focus:border-t-hover-1
+        @apply inline-flex w-full appearance-none items-center justify-center leading-none outline-none transition-all duration-200 bg-t-main-2 border-t-main h-9 rounded-md px-2 text-base border-2 text-t-hover-1 placeholder:text-t-main/40 focus:border-t-hover-1 pb-0.5
     }
 
     textarea {
-        @apply w-full appearance-none leading-none outline-none transition-colors duration-200 bg-t-main-2 border-[2px] border-t-main min-h-[105px] max-h-[400px] rounded-[4px] p-[10px] text-[15px] text-t-hover-1 placeholder:text-t-main/40 focus:border-t-hover-1 md:min-h-[100px]
+        @apply w-full appearance-none leading-none outline-none transition-colors duration-200 bg-t-main-2 border-2 border-t-main min-h-[105px] max-h-[400px] rounded-md p-2 text-base text-t-hover-1 placeholder:text-t-main/40 focus:border-t-hover-1 md:min-h-[100px]
     }
 
     button {
@@ -23,7 +23,7 @@
 }
 
 :root {
-    @apply text-t-main tracking-[0.3px]
+    @apply text-t-main -tracking-tight
 }
 
 @media (prefers-color-scheme: dark) {
